# scalastyle

./: .gitignore  Makefile.am  README  configure.ac
debian_files/: changelog  control  copyright  copyright~
src/: scalastyle  scalastyle.in
